# conf_diff

./: .gitignore  LICENSE  README.md  __init__.py  color_diff.py  conf_diff.py  html_format.py  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: main.yml  release.yml
examples/: example_with_netmiko.py  example_with_scrapli.py
tests/: test_conf_diff.py
